Users can now request to join the group.

--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -152,7 +152,7 @@
                             Message for the user
                         </label>
                         <textarea class="form-control" rows="5" id="inviteMessage">
-User,
+%username%,
 Come join our group to engage in activities together. </textarea>
                     </div>
                     <div class="form-group gradient-buttons justify-content-center block-center text-center data-center">
