--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -59,7 +59,11 @@
                                     <td>
                                         <% if current_user.isAdmin %>
                                             <div class="gradient-buttons">
-                                                <%= button_tag "Join", :class =>"btn btn-lg btn-success", :type => 'button', :data => {:toggle => "modal", :target => "#joinModal#{group.id}"}, :disabled => true%>
+                                                <%= button_tag "Join", :class =>"btn btn-lg btn-success", :type => 'button', :disabled => true %>
+                                            </div>
+                                        <% elsif current_user.pendingInvite(group.id) %>
+                                            <div class="gradient-buttons">
+                                                <%= button_tag "Join", :class =>"btn btn-lg btn-success", :type => 'button', :disabled => true %>
                                             </div>
                                         <% else %>
                                             <div class="gradient-buttons">
@@ -70,18 +74,50 @@
                                 </tr>
                                 <%= content_tag :div, :class => "modal fade", :id => "joinModal#{group.id}" do %>
                                     <div class="modal-dialog">
-                                        <div class="modal-content">
+                                        <div class="modal-content bg-info">
                                             <div class="modal-header">
                                                 <h4 class="modal-title">Join Group: <%= group.name %></h4>
                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                             </div>
                                             <div class="modal-body">
                                                 <H3><%= group.description %></H3>
-                                                <%= form_for group, :url => {:action => 'join', :id => group.id} do |g| %>
-                                                    <p>Enter Group Password to Join: <%= g.password_field 'password', :id => "group_password_#{group.id}"%></p>
+                                                <br>
+                                                <p>If you do not know the password you can 
+                                                    <%= content_tag :a, :href => "#joinPasswordCollapse#{group.id}", :class => "white-link", :data => {:toggle => "collapse"} do %>
+                                                        enter it to join
+                                                    <% end %>
+                                                .</p>
+                                                <p>If you do not know the password you can 
+                                                    <%= content_tag :a, :href => "#joinMessageCollapse#{group.id}", :class => "white-link", :data => {:toggle => "collapse"} do %>
+                                                        request to join
+                                                    <% end %>
+                                                .</p>
+                                                <%= content_tag :div, :id => "joinPasswordCollapse#{group.id}", :class => "collapse" do %>
                                                     <br>
-                                                    <div class="gradient-buttons">
-                                                        <%= g.submit "Join", :class => "btn btn-lg btn-primary" %>
+                                                    <br>
+                                                    <div class="card bg-info justify-content-center">
+                                                        <div class="card-body justify-content-center text-center data-center block-center">
+                                                            <%= form_for group, :url => {:action => 'join', :id => group.id} do |g| %>
+                                                                <div class="input-group w-100">
+                                                                    <%= g.password_field 'password', :class => "form-control", :placeholder => "Enter Group Password to Join", :id => "group_password_#{group.id}"%>
+                                                                    <div class="input-group-append gradient-buttons">
+                                                                        <%= g.submit "Join", :class => "btn form-control btn-primary" %>
+                                                                    </div>
+                                                                </div>
+                                                            <% end %>
+                                                        </div>
+                                                    </div>
+                                                <% end %>
+                                                <%= content_tag :div, :id => "joinMessageCollapse#{group.id}", :class => "collapse" do %>
+                                                    <br>
+                                                    <br>
+                                                    <div class="card bg-info justify-content-center">
+                                                        <div class="card-body justify-content-center text-center data-center block-center">
+                                                            <%= content_tag :form, :name => "#{group.id}" do %>
+                                                                <%= content_tag :textarea, :id => "joinMessage#{group.id}", :class => "form-control", :placeholder => "Enter a message for the group administrator so they know why to let you in." do %><% end %>
+                                                                <button type="button" onclick="submitRequestToJoin(<%= group.id %>)" class="btn form-control btn-primary">Request To Join</button>
+                                                            <% end %>
+                                                        </div>
                                                     </div>
                                                 <% end %>
                                             </div>
