User search bar is now a thing, site looks nicer too.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,12 @@ a {
     color: green!important;
 }
 
+body {
+    padding-top: 65px;
+}
+#godown {
+   height: 60px;
+}
 
 .buttonpanel{
     width: 100%;
