--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -94,6 +94,7 @@
             </div>
         </div>
             <br>
+            <%= link_to "View Group Forum", {:controller => "forum_post", :action => "list"} %>
         </div>
     </div>
 </div>
