--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -99,7 +99,7 @@
                                                         <div class="card-body justify-content-center text-center data-center block-center">
                                                             <%= form_for group, :url => {:action => 'join', :id => group.id} do |g| %>
                                                                 <div class="input-group w-100">
-                                                                    <%= g.password_field 'password', :class => "form-control", :placeholder => "Enter Group Password to Join", :id => "group_password_#{group.id}"%>
+                                                                    <%= g.password_field 'password', :class => "form-control", :placeholder => "Enter Group Password to Join", :id => "group_password_#{group.id}", :required => 'true'%>
                                                                     <div class="input-group-append gradient-buttons">
                                                                         <%= g.submit "Join", :class => "btn form-control btn-primary" %>
                                                                     </div>
