--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -2,7 +2,7 @@
 <br>
 <nav class="navbar navbar-expand-sm bg-info navbar-dark fixed-bottom">
   <% unless controller.action_name == "index" %>
-    <% unless controller.controller_name == "profile" %>
+    <% unless controller.controller_name == "profile" or  controller.controller_name == "forum_post"%>
       <%= button_to "Return", {:action => 'index', :controller => controller.controller_name}, :method => 'get', :type => 'button', :class => 'btn btn-sm btn-outline-secondary' %>
     <% end %>
   <% end %>
