--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -144,6 +144,7 @@
         <% unless current_user.groupid==nil %>
           <%= link_to "View #{current_user.groupName}", {:controller => "group", :action => "view", :id => current_user.groupid}, :class => "dropdown-item white-link" %>
         <% end %>
+        <%= link_to "View Friends", {:controller => :friendships, :action => :index}, :class => "dropdown-item white-link" %>
         <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete', :class => "dropdown-item white-link" %>
       </div>
     </ul>
