--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -36,7 +36,7 @@
                         <% if @user.id == current_user.id %>
                             <h4> You are in group: <%= @user.groupName %></h4>
                         <% else %>
-                            <h4> <%= @user.full_name %> is in group: <%= @user.groupName %></h4>
+                            <h4> <%= @user.first_name %> is in group: <%= @user.groupName %></h4>
                         <% end %>
                     <% else %> 
                         <% if @user.id == current_user.id %>
