Fixed grammar errors with joining groups

--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -82,12 +82,12 @@
                                             <div class="modal-body">
                                                 <H3><%= group.description %></H3>
                                                 <br>
-                                                <p>If you do not know the password you can 
+                                                <p>If you know the password, you can 
                                                     <%= content_tag :a, :href => "#joinPasswordCollapse#{group.id}", :class => "white-link", :data => {:toggle => "collapse"} do %>
                                                         enter it to join
                                                     <% end %>
                                                 .</p>
-                                                <p>If you do not know the password you can 
+                                                <p>If you do not know the password, you can 
                                                     <%= content_tag :a, :href => "#joinMessageCollapse#{group.id}", :class => "white-link", :data => {:toggle => "collapse"} do %>
                                                         request to join
                                                     <% end %>
