--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -37,7 +37,7 @@
             <div class="col-1"></div>
             <div class="col-10">
               <span class="fa fa-user"></span>
-              <a href="/profile/show?id=1" class="white-link">Test User Name</a>
+              <a href="javascript:void(0)" class="white-link">No Users Found</a>
             </div>
             <div class="col-1"></div>
           </div>
