Centered alerts and notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -164,8 +164,8 @@
 <% end %>
 <div class="godown-60" id="godown">
     <!-- This adds the fgroup png:Added by Jake -->
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="notice text-center"><%= notice %></p>
+    <p class="alert text-center"><%= alert %></p>
   <%= yield %>
   <% if user_signed_in? %>
     <%= render 'shared/links' %>
