Styled forum posts and fixed some gradient buttons

--- a/app/views/forum_post/list.html.erb
+++ b/app/views/forum_post/list.html.erb
@@ -80,7 +80,7 @@
                     </div>
                 <% end %>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer gradient-buttons">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
