made the forums more readable by changing the background reply color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,11 @@
     color: white!important;
 }
 
+.bg-reply-color {
+  background-color: #809fff;
+}
+
+
 .red-link {
     color: red!important;
 }
