--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -61,6 +61,7 @@ table.grouptable thead th:first-child {
   background-image: url(searchIcon.png);
   background-position: 10px 12px;
   background-repeat: no-repeat;
+  color: #ff0000;
   font-size: 16px;
   padding: 12px 20px 12px 40px;
   border: 1px solid #0ad;
