--- a/app/views/forum_post/show.html.erb
+++ b/app/views/forum_post/show.html.erb
@@ -21,6 +21,7 @@
                         <%= content_tag :a, :href => "javascript:void(0)", :id => "thumbsDown#{@post.id}", :class => "fa fa-thumbs-down red-link-faded", :onclick => "vote(#{@post.id},false)", :style => "font-size: 30px" do %>
                         <% end %>
                     <% end %>
+                    
                 </div>
             </div>
             <div class="col-7 justify-content-center text-center">
@@ -49,13 +50,16 @@
     </div>
     
     <!-- all top level posts get put here, each one recursively defines the HTML for itself and all of its children -->
+    
     <% @posts.each do |post| %>
+    
         <% if post.parentID == @post.id %>
             <%= post.getElementContainer(current_user,0).html_safe %>
+            <hr style="width: 100%; color: #EEEEEE; height: 5px; background-color:#EEEEEE;" />
         <% end %>
     <% end %>
     
-    <br>
+
     
 </div>
 <div id="addNewPostModal" class="modal fade">
@@ -65,6 +69,7 @@
                 <H2>Post A Reply</H2>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
+            
             <div class="modal-body">
                 <%= form_tag :action => 'postReply' do %>
                     <div class="form-group">
@@ -76,6 +81,7 @@
                         
                     </div>
                 <% end %>
+                
             </div>
             <div class="modal-footer gradient-buttons">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
