adjusted the recent activities on profile to be more readable

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -65,7 +65,7 @@
                               </tr>
                             </thead>
                         
-                            <tbody>
+                            <tbody bgcolor="#80bfff">
                                 <% @acts.each do |act| %>
                                     <%= content_tag :tr, :id => "act#{act.id}" do %>
                                     
