more adjustments to forums

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@
 }
 
 .bg-reply-color {
-  background-color: #80bfff;
+  background-color: #cce6ff;
 }
 
 .bg-search-color {
@@ -45,7 +45,7 @@
 }
 
 .red-link-faded {
-    color: #F6CECE!important;
+    color: #ff6666!important;
 }
 
 .black-link {
@@ -56,7 +56,7 @@
     color: green!important;
 }
 .green-link-faded {
-    color: #CEF6CE!important;
+    color: #5cd65c!important;
 }
 
 .blue-link {
