--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -39,13 +39,15 @@
                     </center>
                 <% else %>
                     <div class="input-group input-group-lg mb-3 justify-content-center">
-                        <input type='text' id='activityTypeSearchInput' class="searchBar bg-success" style="color: white; border: 0px;" onkeyup='activityTypeSearch()' placeholder='Search for an entry...' title='Search here'>
+                        <input type='text' id='activityTypeSearchInput' class="rounded bg-success" style="color: white; border: 0px;" onkeyup='activityTypeSearch()' placeholder=' Search for an entry    ' title='Search here'>
                         <div class="input-group-append">
-                            <select id='activityTypeSearchSelect' class='selectBar bg-success' style="color: white; border: 0px;" onchange='activityTypeSearch()'>
+                            &nbsp
+                            <select id='activityTypeSearchSelect' class='rounded bg-success' style="color: white; border: 0px;" onchange='activityTypeSearch()'>
                                 <option>Name</option>
                                 <option>Score</option>
                             </select>
-                            <button type="button" class="btn btn-success" style="border: 0px;" data-toggle="modal" data-target="#newActivityTypeModal">
+                            &nbsp
+                            <button type="button" class="btn rounded btn-success" style="border: 0px;" data-toggle="modal" data-target="#newActivityTypeModal">
                                 <i class="fa fa-plus"></i>
                             </button>
                         </div>
