Fixed search to not be case sensitive

--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -16,7 +16,7 @@
       <div class="input-group">
         <input type="text" onkeyup="verifySearchQuery()" class="form-control rounded" id="searchBarInput" placeholder="Search Users">
         <div class="input-group-append">
-          <button id="searchBarButton" class="btn btn-success fa fa-search" onclick="searchUser()" type="button" data-toggle="modal" data-target="#userSearchModal" disabled></button>
+          <button id="searchBarButton" class="btn btn-success fa fa-search" onclick="searchUser()" type="submit" formaction="javascript::void()" data-toggle="modal" data-target="#userSearchModal" disabled></button>
         </div>
       </div>
     </form>
