--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -27,7 +27,7 @@
                 <input type="text" id="activitySearchInput" class="rounded bg-success" style="color: white; border: 0px;" onkeyup="activitySearch()" placeholder=" Search for an entry    " title="Search here">
                 <div class="input-group-append">
                     &nbsp
-                    <select id='activitySearchSelect' class='rounded bg-success' style="color: white; border: 0px;border-radius: 0 !important;" onchange="activitySearch()">
+                    <select id='activitySearchSelect' class='rounded bg-success' style="color: white; border: 0px;" onchange="activitySearch()">
                         <option>Activity Type</option>
                         <option>Duration</option>
                         <option>Performer</option>
